@@ -177,14 +177,12 @@ AbelianGroup LayeredChainPair::homology() const {
     //
     // This is established simply by examining the edges on the boundary
     // of each layered chain.
-    AbelianGroup ans;
     MatrixInt mat(3, 3);
     mat.initialise(1);
     mat.entry(0, 1) = mat.entry(2, 2) = -1;
     mat.entry(1, 0) = chain_[0].index();
     mat.entry(2, 1) = chain_[1].index();
-    ans.addGroup(mat);
-    return ans;
+    return AbelianGroup(std::move(mat));
 }
 
 } // namespace regina
